--- a/package.json
+++ b/package.json
@@ -10,16 +10,12 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^1.9.2",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.1.0",
-    "sequelize": "^6.28.0",
-    "webpack": "^5.75.0"
-  },
-  "devDependencies": {
-    "webpack-cli": "^5.0.1"
+    "sequelize": "^6.28.0"
   }
 }
