--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "webpack"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "browserify": "^17.0.0",
